--- a/index.html
+++ b/index.html
@@ -63,7 +63,28 @@
 
     <div id="result"></div>
 
-   
+<!-- Default Statcounter code for Property Amortization
+Calculator https://cdurakci.github.io/emlak/ -->
+<script type="text/javascript">
+var sc_project=12996183; 
+var sc_invisible=1; 
+var sc_security="4ae1fdbb"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/12996183/0/4ae1fdbb/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->   
 </body>
 ©2024 Can Janoshowsky
+<img
+class="statcounter"
+src="https://c.statcounter.com/12996183/0/4ae1fdbb/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a>
 </html>
