--- a/index.html
+++ b/index.html
@@ -82,9 +82,5 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->   
 </body>
 ©2024 Can Janoshowsky
-<img
-class="statcounter"
-src="https://c.statcounter.com/12996183/0/4ae1fdbb/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a>
+<img class="statcounter" src="https://c.statcounter.com/12996183/0/4ae1fdbb/1/" referrerPolicy="no-referrer-when-downgrade"></a>
 </html>
