--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	<link rel="stylesheet" href="roboto.css">
 
     <title>Gayrimenkul Amortisman Hesaplayıcı</title>
+	<style>
+body {
+  font-family: "Roboto", sans-serif;
+}
+</style>
 </head>
  <script>
         function calculate() {
