--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
     Yillik Stopaj: 2.5%<br>
 	<p>
     <form id="calculator-form">
-        <label for="kira">Aylık Kira:</label>
+        <label for="kira">Aylık Kira Getirisi:</label>
         <input type="number" id="kira" name="kira" value="30000" step="1000"><br>
 
         <label for="fiyat">Satış Fiyatı:</label>
