--- a/index.html
+++ b/index.html
@@ -58,11 +58,21 @@ body {
 	
 <body onload="calculate();">
     <h1>Gayrimenkul Amortisman Hesaplayıcı</h1>
-	Aylik Faiz: 4.05 %<br>
-	Yillik faiz: 55%<br>
-    Tufe: 63.47 %<br>
-    Aylik Stopaj: 7.5%<br>
-    Yillik Stopaj: 2.5%<br>
+	
+<table style="width:80%">
+  <tr>
+    <td>Aylik Faiz: 4.05 %</td>
+    <td>Aylik Stopaj: 7.5%</td>
+  </tr>
+  <tr>
+    <td>Yillik faiz: 55%</td>
+    <td>Yillik Stopaj: 2.5%</td>
+    </tr>
+   <tr>
+    <td>Tufe: 63.47 %</td>
+   </tr>
+</table>
+
 	<p>
     <form id="calculator-form">
         <label for="kira">Aylık Kira Getirisi:</label>
