--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@ body {
 	
 <table style="width:50%">
   <tr>
-    <td>Aylik Faiz: 4.05 %</td>
-    <td>Aylik Stopaj: 7.5%</td>
+    <td>Aylık Faiz: 4.05 %</td>
+    <td>Aylık Stopaj: 7.5%</td>
   </tr>
   <tr>
-    <td>Yillik faiz: 55%</td>
-    <td>Yillik Stopaj: 2.5%</td>
+    <td>Yıllık Faiz: 55%</td>
+    <td>Yıllık Stopaj: 2.5%</td>
     </tr>
    <tr>
-    <td>Tufe: 63.47 %</td>
+    <td>Tüfe Ort.: 63.47 %</td>
    </tr>
 </table>
 
